added build step to pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,9 +28,11 @@ jobs:
         run:  ./download-prebuilt-dependencies.sh && ./bVNC/prepare_project.sh --skip-build libs nopath
 
       - name: Run gradle build
-        run: ./gradlew assembleDebug
+        run: ./gradlew :aRDP-app:build :bVNC-app:build :aSPICE-app:build :CustomVnc-app:build :Opaque-app:build :freeaRDP-app:build :freeaSPICE-app:build :freebVNC-app:build
 
-      # Run Tests Build
+
+
+# Run Tests Build
       - name: Run gradle tests
         run: ./gradlew test
 
