--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          echo $ANDROID_SDK
-          sudo apt-get install curl -yy
+          echo $PATH
           curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip commandlinetools-linux-9477386_latest.zip
           PATH=$(pwd)/cmdline-tools/bin:${PATH}
           sdkmanager "platform-tools" "platforms;android-33" "platforms;android-21"
+          echo $PATH
           echo $ANDROID_SDK
 
       - name: Set Up JDK
