Install SDK on pipeline.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,8 @@
 name: GitHub Actions
 run-name: Unit tests
 on: [push]
+env:
+  ANDROID_SDK="~/Android/Sdk"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -15,13 +17,14 @@ jobs:
 
       - name: Install prerequisites
         run: |
-          echo $PATH
+          mkdir -p ${ANDROID_SDK}
+          cd ${ANDROID_SDK}
           curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
           unzip commandlinetools-linux-9477386_latest.zip
-          PATH=$(pwd)/cmdline-tools/bin:${PATH}
-          sdkmanager "platform-tools" "platforms;android-33" "platforms;android-21"
-          echo $PATH
-          echo $ANDROID_SDK
+          rm commandlinetools-linux-9477386_latest.zip
+          ${ANDROID_SDK}/cmdline-tools/sdkmanager "platform-tools" "platforms;android-33" "platforms;android-21"
+          echo "PATH=${PATH}"
+          echo "ANDROID_SDK=${ANDROID_SDK}"
 
       - name: Set Up JDK
         uses: actions/setup-java@v1
