--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,6 +20,8 @@ jobs:
           mkdir -p ${ANDROID_SDK}
           cd ${ANDROID_SDK}
           curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          echo $(pwd)
+          ls -l
           unzip commandlinetools-linux-9477386_latest.zip
           rm commandlinetools-linux-9477386_latest.zip
           ${ANDROID_SDK}/cmdline-tools/sdkmanager "platform-tools" "platforms;android-33" "platforms;android-21"
