--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
           curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
           unzip commandlinetools-linux-9477386_latest.zip
           rm commandlinetools-linux-9477386_latest.zip
-          ${ANDROID_HOME}/cmdline-tools/bin/sdkmanager "platform-tools" "platforms;android-33" "platforms;android-21"
+          ${ANDROID_HOME}/cmdline-tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} "platform-tools" "platforms;android-33" "platforms;android-21"
           echo "PATH=${PATH}"
           echo "ANDROID_HOME=${ANDROID_HOME}"
 
