--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Dependencies
         run: |
           ./download-prebuilt-dependencies.sh && ./bVNC/prepare_project.sh --skip-build libs nopath
-          sdkmanager --install "platform-tools" "platforms;android-33" "platforms;android-21" "ndk;20.1.5948944"
+          sdkmanager --install "platform-tools" "platforms;android-33" "platforms;android-21" "ndk;21.4.7075529" "ndk;18.1.5063045" "ndk;15.2.4203891"
 
       - name: Run gradle build
         run: ./gradlew :aRDP-app:build :bVNC-app:build :aSPICE-app:build :CustomVnc-app:build :Opaque-app:build :freeaRDP-app:build :freeaSPICE-app:build :freebVNC-app:build
