--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           ./download-prebuilt-dependencies.sh && ./bVNC/prepare_project.sh --skip-build libs nopath
           sdkmanager --install "platform-tools" "platforms;android-33" "platforms;android-21" "ndk;21.4.7075529" "ndk;18.1.5063045"
+          ls -l remoteClientLib/jni/libs
 
       - name: Run gradle build
         run: ./gradlew :aRDP-app:build :bVNC-app:build :aSPICE-app:build :CustomVnc-app:build :Opaque-app:build :freeaRDP-app:build :freeaSPICE-app:build :freebVNC-app:build
