--- a/bVNC/build.gradle
+++ b/bVNC/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion targetApi
         minSdkVersion project.getProperties().get("SDK_VERSION")
         vectorDrawables.useSupportLibrary = true
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -44,6 +45,8 @@ dependencies {
     implementation group: 'androidx.legacy', name: 'legacy-support-v4', version: '1.0.0'
     implementation group: 'androidx.vectordrawable', name: 'vectordrawable', version: '1.1.0'
     implementation group: 'androidx.preference', name: 'preference-ktx', version: '1.2.0'
+    implementation group: 'androidx.preference', name: 'preference-ktx', version: '1.2.0'
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.10.2'
     implementation 'net.zetetic:android-database-sqlcipher:4.5.1@aar'
     implementation "androidx.sqlite:sqlite-ktx:2.2.0"
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.23'
@@ -56,6 +59,12 @@ dependencies {
     implementation 'com.google.android.play:review-ktx:2.0.1'
     implementation project(path: ':common')
     implementation 'com.google.android.gms:play-services-base:18.0.1'
+
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation project(path: ':bVNC')
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
 repositories {
     mavenCentral()
