--- a/bVNC/build.gradle
+++ b/bVNC/build.gradle
@@ -68,6 +68,27 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+
+    //mocking hopefully
+
+    testImplementation 'junit:junit:4.13.2'
+    //testImplementation 'junit:junit:5.2.0'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    //// required if you want to use Mockito for unit tests
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    //// required if you want to use Mockito for Android tests
+    androidTestImplementation 'org.mockito:mockito-android:5.3.1'
+
+
 }
 repositories {
     mavenCentral()
